# Tidybot

./: .gitignore  README.md
maps/: home.pgm  home.yaml
scripts/: compute_inertia.py  send_goal.py
src/tidybot_description/: CMakeLists.txt  package.xml
src/tidybot_description/config/: ekf.yaml  nav.rviz  nav2.yaml  slam_toolbox.yaml
src/tidybot_description/launch/: mapping.launch.py  navigation.launch.py  spawn_empty.launch.py  spawn_home.launch.py
src/tidybot_description/urdf/: arm.xacro  base.xacro  inertials.xacro  ros2_control.xacro  sensors.xacro  tidybot.urdf  tidybot.urdf.xacro  torso.xacro
src/tidybot_description/worlds/: empty.world  home.world
